--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.3.1",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^28.0.2",
     "vite": "^2.9.5",
